# rag_tutorial

./: 01_rag_fill_db.py  02_snowflake_001.sql  02_snowflake_002.py  03_openrouter_01_basics.py  03_openrouter_02_streaming.py  03_openrouter_03_model_fallback.py  03_openrouter_04_tool_calling.py  03_openrouter_05_web_search.py  03_openrouter_06_provider_routing.py  03_openrouter_07_prompt_caching.py  AGENTS.md  ask.py  fill_db.py  main.py  pyproject.toml  snowflake_cortex_discussion_summary.md  vector_databases_learning_notes.md
chroma_db/: chroma.sqlite3
docs/: ai_agent_evals_reference.md  llm_token_cost_optimization_architecture.md  openrouter_revision_notes.md  project_cheat_sheet.md  prompt_caching_revision_notes.md  rag_chromadb_learning_notes.md
