[project]
name = "rag-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "langchain-community>=0.4.2",
    "langchain-text-splitters>=1.1.2",
    "openai>=2.41.0",
    "pandas>=3.0.3",
    "pypdf>=6.12.2",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
